# RenShu-AI

./: .gitignore
backend/: .gitignore  README.md  main.py  pyproject.toml
backend/app/src/common/config/: app_config.py  prosgresql_config.py  setting_config.py
backend/app/src/common/context/: __init__.py
backend/app/src/common/decorators/: __init__.py  auth_decorators.py
backend/app/src/controller/: __init__.py  account_controller.py  admin_controller.py  chat_controller.py  conversation_controller.py  model_config_controller.py  user_controller.py
backend/app/src/dependencies/: dependency.py
backend/app/src/middleware/: __init__.py  auth_middleware.py
backend/app/src/model/: __init__.py  account_model.py  conversation_models.py  herb_models.py  medical_models.py  model_config_models.py  system_models.py  user_model.py
backend/app/src/response/: response_factory.py  response_middleware.py
backend/app/src/schema/: chat_schema.py  conversation_schema.py  model_config_schema.py  user_schema.py
backend/app/src/service/: __init__.py  account_service.py  base_service.py  chat_servcie.py  conversation_service.py  language_model_service.py  user_service.py
backend/app/src/utils/: __init__.py  auth_utils.py
backend/docs/: SmartTCM-Agent技术文档.md
backend/graphrag/dev/: graphrag_api.py  graphrag_indexing.py  graphrag_prompt_tune.py  graphrag_query.py
backend/script/: init_tcm_db_postgresql.sql  router.xmind
backend/scripts/: cleanup_duplicates.py  fix_db_constraints.py  import_builtin_models_2026.py  init_tcm_db.sql
backend/test/: a.py  b.py
(+74 files in other folders)
