[project]
name = "renti-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true